force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Cron_Trigger_Id__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Cron_Trigger_Id__c</fullName>
    <description>Id of cron trigger job</description>
    <inlineHelpText>Id of cron trigger job</inlineHelpText>
    <label>Cron Trigger ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>