force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Custom_Template__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Custom_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Template</label>
    <referenceTo>report_sender__Custom_Template__c</referenceTo>
    <relationshipLabel>Email Data</relationshipLabel>
    <relationshipName>Email_Data</relationshipName>
    <type>Lookup</type>
</CustomField>