force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Dashboard_Id__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Dashboard_Id__c</fullName>
    <label>Dashboard ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>