force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Email_From_Address__c</fullName>
    <label>Email From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>