force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__ListViewId__c.field-meta.xml
<CustomField>
    <fullName>report_sender__ListViewId__c</fullName>
    <label>List View ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>