force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__MetadataFilters__c.field-meta.xml
<CustomField>
    <fullName>report_sender__MetadataFilters__c</fullName>
    <label>Metadata Filters</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>