force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Named_Credentials__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Named_Credentials__c</fullName>
    <label>Named Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>