force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__NextSendDate__c.field-meta.xml
<CustomField>
    <fullName>report_sender__NextSendDate__c</fullName>
    <label>Next Send Date</label>
    <type>DateTime</type>
</CustomField>