force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>report_sender__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>