force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Successful_Send__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Successful_Send__c</fullName>
    <label>Successful Send</label>
    <length>255</length>
    <type>Text</type>
</CustomField>