force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>report_sender__TargetObjectId__c</fullName>
    <label>Target Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>