force-app/main/default/objects/report_sender__Email_Data__c/listViews/allSelection_Email_Data.listView-meta.xml
<ListView>
    <fullName>allSelection_Email_Data</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>